--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Chillwise Air Conditioner | AC Repair & Installation Delhi</title>
+<title>Chillwise Air Conditioner | AC Repair Delhi</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Professional AC repair, installation and gas filling services in Delhi. Trusted technicians, transparent pricing, same-day service.">
+<meta name="description" content="Professional AC repair, installation & gas filling service in Delhi. Same-day service, transparent pricing.">
 
 <style>
 body{margin:0;font-family:Arial,sans-serif;background:#f1f5f9;color:#0f172a}
@@ -18,7 +18,7 @@ p{font-size:16px;line-height:1.5}
 section{padding:40px 20px;text-align:center}
 .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:20px;max-width:1100px;margin:auto}
 .card{background:#fff;border-radius:16px;overflow:hidden;box-shadow:0 8px 22px rgba(0,0,0,.08)}
-.card img{width:100%;height:170px;object-fit:cover}
+.card img{width:100%;height:180px;object-fit:cover}
 .card div{padding:18px}
 .price{font-size:22px;color:#16a34a;font-weight:bold;margin-top:5px}
 .small{font-size:13px;color:#475569}
@@ -33,18 +33,18 @@ footer{background:#020617;color:#cbd5e1;padding:20px;text-align:center;font-size
 /* Brands */
 .brands{display:grid;grid-template-columns:repeat(auto-fit,minmax(90px,1fr));gap:15px;max-width:900px;margin:auto}
 .brand{background:#fff;padding:12px;border-radius:12px;box-shadow:0 6px 15px rgba(0,0,0,.08)}
-.brand img{width:32px;margin-bottom:6px}
+.brand img{width:36px;margin-bottom:6px}
 </style>
 </head>
 
 <body>
 
-<div class="topbar">📞 Call Now for AC Repair in Delhi: 9690990107</div>
+<div class="topbar">📞 Call Now for AC Service in Delhi: 9690990107</div>
 
 <header>
 <h1>Chillwise Air Conditioner ❄️</h1>
-<p>Professional AC Repair & Installation Services in Delhi</p>
-<p class="small">Emergency AC repair available during peak summer hours</p>
+<p>Professional AC Repair, Installation & Gas Filling</p>
+<p class="small">Trusted technicians | Same-day service</p>
 <a class="btn" href="https://wa.me/919690990107">WhatsApp</a>
 <a class="btn callbtn" href="tel:+919690990107">Call Now</a>
 </header>
@@ -53,16 +53,16 @@ footer{background:#020617;color:#cbd5e1;padding:20px;text-align:center;font-size
 <h2>Our AC Services</h2>
 <div class="grid">
 <div class="card">
-<img src="https://images.pexels.com/photos/4777945/pexels-photo-4777945.jpeg">
-<div><strong>AC Repair & Service</strong><p class="small">Expert diagnosis and reliable repair for all AC brands</p></div>
+<img src="https://images.pexels.com/photos/4108802/pexels-photo-4108802.jpeg">
+<div><strong>AC Repair & Service</strong><p class="small">Accurate diagnosis and reliable repair</p></div>
 </div>
 <div class="card">
 <img src="https://images.pexels.com/photos/5691627/pexels-photo-5691627.jpeg">
-<div><strong>AC Installation</strong><p class="small">Safe installation for split and window ACs</p></div>
+<div><strong>AC Installation</strong><p class="small">Safe split & window AC installation</p></div>
 </div>
 <div class="card">
 <img src="https://images.pexels.com/photos/4108715/pexels-photo-4108715.jpeg">
-<div><strong>Gas Filling</strong><p class="small">Gas refilling with leakage check and testing</p></div>
+<div><strong>Gas Filling</strong><p class="small">Leak check with performance testing</p></div>
 </div>
 </div>
 </section>
@@ -84,19 +84,25 @@ footer{background:#020617;color:#cbd5e1;padding:20px;text-align:center;font-size
 <div class="grid">
 <div class="card"><div><strong>Jet Pump AC Service</strong><div class="price">₹499</div></div></div>
 <div class="card"><div><strong>Water Leakage Repair</strong><div class="price">₹399</div></div></div>
-<div class="card"><div><strong>Noise Issue Fixing</strong><div class="price">₹499</div></div></div>
+<div class="card"><div><strong>Noise Issue Fix</strong><div class="price">₹499</div></div></div>
 <div class="card"><div><strong>PCB Repair (Non-Inverter)</strong><div class="price">₹1,999</div></div></div>
 <div class="card"><div><strong>PCB Repair (Inverter)</strong><div class="price">₹4,499</div></div></div>
 <div class="card"><div><strong>Gas Refilling</strong><div class="price">₹2,499 – ₹3,199</div></div></div>
 </div>
-<p class="small">Prices may vary based on AC condition, model and site requirements.</p>
+<p class="small">Final price depends on AC condition and site work.</p>
 </section>
 
 <section>
-<h2>Before & After Service</h2>
+<h2>Before & After AC Service</h2>
 <div class="grid">
-<div class="card"><img src="https://images.pexels.com/photos/4108800/pexels-photo-4108800.jpeg"></div>
-<div class="card"><img src="https://images.pexels.com/photos/4108801/pexels-photo-4108801.jpeg"></div>
+<div class="card">
+<img src="https://images.pexels.com/photos/4108800/pexels-photo-4108800.jpeg">
+<div><strong>Before Service</strong><p class="small">Dirty filters, low cooling</p></div>
+</div>
+<div class="card">
+<img src="https://images.pexels.com/photos/4108801/pexels-photo-4108801.jpeg">
+<div><strong>After Service</strong><p class="small">Clean coils, improved cooling</p></div>
+</div>
 </div>
 </section>
 
@@ -104,27 +110,14 @@ footer{background:#020617;color:#cbd5e1;padding:20px;text-align:center;font-size
 <h2>Customer Reviews</h2>
 <div class="grid">
 <div class="card"><div>“Technician arrived on time and fixed the issue professionally.”<br><strong>- Sandeep, Delhi</strong></div></div>
-<div class="card"><div>“Quick installation with transparent pricing.”<br><strong>- Pooja, Dwarka</strong></div></div>
-<div class="card"><div>“Gas refilling done properly. AC working perfectly.”<br><strong>- Imran, Laxmi Nagar</strong></div></div>
+<div class="card"><div>“Transparent pricing and quick service.”<br><strong>- Pooja, Dwarka</strong></div></div>
+<div class="card"><div>“AC cooling improved after gas filling.”<br><strong>- Imran, Laxmi Nagar</strong></div></div>
 </div>
 </section>
 
 <section>
-<h2>Frequently Asked Questions</h2>
-<p><strong>Do you provide same-day service?</strong><br>Yes, in most areas of Delhi.</p>
-<p><strong>Do you service all AC brands?</strong><br>Yes, all major brands.</p>
-<p><strong>Can final price vary?</strong><br>Yes, based on condition and site requirements.</p>
-</section>
-
-<section>
-<h2>Working Hours</h2>
-<p>Monday – Sunday: <strong>9:00 AM – 8:00 PM</strong><br>Service available across Delhi</p>
-</section>
-
-<section>
-<h2>Find Us on Google Maps</h2>
-<iframe src="https://www.google.com/maps?q=Chillwise%20Air%20Conditioner%20Delhi&output=embed"
-width="100%" height="300" style="border:0;border-radius:16px" loading="lazy"></iframe>
+<h2>Service Areas in Delhi</h2>
+<p>Dwarka | Uttam Nagar | Janakpuri | Rohini | Laxmi Nagar | Karol Bagh | South Delhi | West Delhi</p>
 </section>
 
 <footer>
@@ -135,4 +128,4 @@ width="100%" height="300" style="border:0;border-radius:16px" loading="lazy"></i
 <div class="callbar"><a href="tel:+919690990107">📞 Call Now: 9690990107</a></div>
 
 </body>
-</html>
+  </html>
