--- a/index.html
+++ b/index.html
@@ -2,130 +2,252 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Chillwise Air Conditioner | AC Repair Delhi</title>
+<title>Chillwise Air Conditioner | AC Repair & Installation Delhi</title>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Professional AC repair, installation & gas filling service in Delhi. Same-day service, transparent pricing.">
+<meta name="description" content="Professional AC repair, installation and gas filling services in Delhi. Trusted technicians, transparent pricing, same-day service.">
 
 <style>
-body{margin:0;font-family:Arial,sans-serif;background:#f1f5f9;color:#0f172a}
-.topbar{background:#020617;color:#fff;text-align:center;padding:8px;font-size:14px;font-weight:bold}
-header{background:linear-gradient(135deg,#0284c7,#0ea5e9);color:#fff;padding:55px 20px;text-align:center}
-h1{font-size:32px;margin-bottom:8px}
-h2{margin-bottom:10px}
-p{font-size:16px;line-height:1.5}
-.btn{display:inline-block;margin:8px;padding:14px 32px;background:#16a34a;color:#fff;text-decoration:none;border-radius:30px;font-weight:bold}
-.callbtn{background:#020617}
-section{padding:40px 20px;text-align:center}
-.grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:20px;max-width:1100px;margin:auto}
-.card{background:#fff;border-radius:16px;overflow:hidden;box-shadow:0 8px 22px rgba(0,0,0,.08)}
-.card img{width:100%;height:180px;object-fit:cover}
-.card div{padding:18px}
-.price{font-size:22px;color:#16a34a;font-weight:bold;margin-top:5px}
-.small{font-size:13px;color:#475569}
-footer{background:#020617;color:#cbd5e1;padding:20px;text-align:center;font-size:14px}
+*{box-sizing:border-box}
+body{
+  margin:0;
+  font-family:Arial,Helvetica,sans-serif;
+  background:#f1f5f9;
+  color:#0f172a;
+}
 
-/* Floating */
-.whatsapp{position:fixed;bottom:75px;right:18px;background:#16a34a;color:#fff;padding:14px 16px;border-radius:50%;font-size:22px}
-.whatsapp a{color:#fff;text-decoration:none}
-.callbar{position:fixed;bottom:0;left:0;width:100%;background:#020617;color:#fff;text-align:center;padding:12px;font-weight:bold}
-.callbar a{color:#fff;text-decoration:none}
+/* Top bar */
+.topbar{
+  background:#020617;
+  color:#fff;
+  text-align:center;
+  padding:8px;
+  font-size:14px;
+  font-weight:bold;
+}
+
+/* Header */
+header{
+  background:linear-gradient(135deg,#0284c7,#0ea5e9);
+  color:#fff;
+  padding:55px 20px;
+  text-align:center;
+}
+
+header h1{
+  font-size:30px;
+  margin-bottom:10px;
+}
+
+header p{
+  margin:6px 0;
+  font-size:16px;
+}
+
+.header-btns{
+  margin-top:20px;
+}
+
+.btn{
+  display:inline-block;
+  margin:6px;
+  padding:14px 32px;
+  border-radius:30px;
+  font-weight:bold;
+  text-decoration:none;
+  color:#fff;
+}
+
+.btn.whatsapp{background:#16a34a;}
+.btn.call{background:#020617;}
+
+/* Sections */
+section{
+  padding:40px 20px;
+  text-align:center;
+}
+
+h2{
+  font-size:26px;
+  margin-bottom:20px;
+}
+
+/* Cards */
+.grid{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+  gap:20px;
+  max-width:1100px;
+  margin:auto;
+}
+
+.card{
+  background:#fff;
+  border-radius:16px;
+  padding:24px;
+  box-shadow:0 8px 22px rgba(0,0,0,.08);
+}
+
+.card h3{
+  margin-bottom:8px;
+  font-size:20px;
+}
+
+.card p{
+  font-size:14px;
+  color:#475569;
+}
+
+.price{
+  font-size:22px;
+  font-weight:bold;
+  color:#16a34a;
+  margin-top:10px;
+}
 
 /* Brands */
-.brands{display:grid;grid-template-columns:repeat(auto-fit,minmax(90px,1fr));gap:15px;max-width:900px;margin:auto}
-.brand{background:#fff;padding:12px;border-radius:12px;box-shadow:0 6px 15px rgba(0,0,0,.08)}
-.brand img{width:36px;margin-bottom:6px}
+.brands{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
+  gap:16px;
+  max-width:800px;
+  margin:auto;
+}
+
+.brand{
+  background:#fff;
+  padding:16px;
+  border-radius:14px;
+  font-weight:bold;
+  box-shadow:0 6px 16px rgba(0,0,0,.08);
+}
+
+/* Reviews */
+.review{
+  font-style:italic;
+  font-size:15px;
+}
+
+/* Footer */
+footer{
+  background:#020617;
+  color:#cbd5e1;
+  padding:20px;
+  font-size:14px;
+}
+
+/* Floating buttons */
+.whatsapp-float{
+  position:fixed;
+  right:18px;
+  bottom:70px;
+  background:#16a34a;
+  color:#fff;
+  padding:14px 16px;
+  border-radius:50%;
+  font-size:22px;
+  text-decoration:none;
+}
+
+.callbar{
+  position:fixed;
+  bottom:0;
+  left:0;
+  width:100%;
+  background:#020617;
+  color:#fff;
+  text-align:center;
+  padding:12px;
+  font-weight:bold;
+}
+.callbar a{color:#fff;text-decoration:none;}
 </style>
 </head>
 
 <body>
 
-<div class="topbar">📞 Call Now for AC Service in Delhi: 9690990107</div>
+<div class="topbar">
+📞 Call Now for AC Service in Delhi: 9690990107
+</div>
 
 <header>
-<h1>Chillwise Air Conditioner ❄️</h1>
-<p>Professional AC Repair, Installation & Gas Filling</p>
-<p class="small">Trusted technicians | Same-day service</p>
-<a class="btn" href="https://wa.me/919690990107">WhatsApp</a>
-<a class="btn callbtn" href="tel:+919690990107">Call Now</a>
+  <h1>Chillwise Air Conditioner</h1>
+  <p>Professional AC Repair, Installation & Gas Filling Services</p>
+  <p style="font-size:13px;opacity:.9;">Trusted technicians • Same-day service</p>
+
+  <div class="header-btns">
+    <a href="https://wa.me/919690990107" class="btn whatsapp">WhatsApp</a>
+    <a href="tel:9690990107" class="btn call">Call Now</a>
+  </div>
 </header>
 
 <section>
-<h2>Our AC Services</h2>
-<div class="grid">
-<div class="card">
-<img src="https://images.pexels.com/photos/4108802/pexels-photo-4108802.jpeg">
-<div><strong>AC Repair & Service</strong><p class="small">Accurate diagnosis and reliable repair</p></div>
-</div>
-<div class="card">
-<img src="https://images.pexels.com/photos/5691627/pexels-photo-5691627.jpeg">
-<div><strong>AC Installation</strong><p class="small">Safe split & window AC installation</p></div>
-</div>
-<div class="card">
-<img src="https://images.pexels.com/photos/4108715/pexels-photo-4108715.jpeg">
-<div><strong>Gas Filling</strong><p class="small">Leak check with performance testing</p></div>
-</div>
-</div>
+  <h2>Our AC Services</h2>
+  <div class="grid">
+    <div class="card">
+      <h3>AC Repair & Service</h3>
+      <p>Accurate diagnosis and reliable repair for all AC brands</p>
+    </div>
+    <div class="card">
+      <h3>AC Installation</h3>
+      <p>Safe installation for split and window AC units</p>
+    </div>
+    <div class="card">
+      <h3>Gas Filling</h3>
+      <p>Gas refilling with leakage check and proper testing</p>
+    </div>
+  </div>
 </section>
 
 <section>
-<h2>Brands We Service</h2>
-<div class="brands">
-<div class="brand"><img src="https://img.icons8.com/color/48/lg.png"><div>LG</div></div>
-<div class="brand"><img src="https://img.icons8.com/color/48/samsung.png"><div>Samsung</div></div>
-<div class="brand"><img src="https://img.icons8.com/color/48/voltas.png"><div>Voltas</div></div>
-<div class="brand"><img src="https://img.icons8.com/color/48/daikin.png"><div>Daikin</div></div>
-<div class="brand"><img src="https://img.icons8.com/color/48/hitachi.png"><div>Hitachi</div></div>
-<div class="brand"><img src="https://img.icons8.com/color/48/general-electric.png"><div>O’General</div></div>
-</div>
+  <h2>Brands We Service</h2>
+  <div class="brands">
+    <div class="brand">LG</div>
+    <div class="brand">Samsung</div>
+    <div class="brand">Voltas</div>
+    <div class="brand">Daikin</div>
+    <div class="brand">Hitachi</div>
+    <div class="brand">O’General</div>
+  </div>
 </section>
 
 <section>
-<h2>Service Pricing</h2>
-<div class="grid">
-<div class="card"><div><strong>Jet Pump AC Service</strong><div class="price">₹499</div></div></div>
-<div class="card"><div><strong>Water Leakage Repair</strong><div class="price">₹399</div></div></div>
-<div class="card"><div><strong>Noise Issue Fix</strong><div class="price">₹499</div></div></div>
-<div class="card"><div><strong>PCB Repair (Non-Inverter)</strong><div class="price">₹1,999</div></div></div>
-<div class="card"><div><strong>PCB Repair (Inverter)</strong><div class="price">₹4,499</div></div></div>
-<div class="card"><div><strong>Gas Refilling</strong><div class="price">₹2,499 – ₹3,199</div></div></div>
-</div>
-<p class="small">Final price depends on AC condition and site work.</p>
+  <h2>Service Pricing</h2>
+  <div class="grid">
+    <div class="card"><h3>Jet Pump AC Service</h3><div class="price">₹499</div></div>
+    <div class="card"><h3>Water Leakage Repair</h3><div class="price">₹399</div></div>
+    <div class="card"><h3>Noise Issue Fixing</h3><div class="price">₹499</div></div>
+    <div class="card"><h3>PCB Repair (Non-Inverter)</h3><div class="price">₹1,999</div></div>
+    <div class="card"><h3>PCB Repair (Inverter)</h3><div class="price">₹4,499</div></div>
+    <div class="card"><h3>Gas Refilling</h3><div class="price">₹2,499 – ₹3,199</div></div>
+  </div>
+  <p style="font-size:13px;color:#475569;margin-top:10px;">
+    Final price may vary based on AC condition and site requirements.
+  </p>
 </section>
 
 <section>
-<h2>Before & After AC Service</h2>
-<div class="grid">
-<div class="card">
-<img src="https://images.pexels.com/photos/4108800/pexels-photo-4108800.jpeg">
-<div><strong>Before Service</strong><p class="small">Dirty filters, low cooling</p></div>
-</div>
-<div class="card">
-<img src="https://images.pexels.com/photos/4108801/pexels-photo-4108801.jpeg">
-<div><strong>After Service</strong><p class="small">Clean coils, improved cooling</p></div>
-</div>
-</div>
+  <h2>Customer Reviews</h2>
+  <div class="grid">
+    <div class="card review">“Technician arrived on time and fixed the issue professionally.”<br><b>– Sandeep, Delhi</b></div>
+    <div class="card review">“Very transparent pricing and quick service.”<br><b>– Pooja, Dwarka</b></div>
+    <div class="card review">“AC cooling improved after gas refilling.”<br><b>– Imran, Laxmi Nagar</b></div>
+  </div>
 </section>
 
 <section>
-<h2>Customer Reviews</h2>
-<div class="grid">
-<div class="card"><div>“Technician arrived on time and fixed the issue professionally.”<br><strong>- Sandeep, Delhi</strong></div></div>
-<div class="card"><div>“Transparent pricing and quick service.”<br><strong>- Pooja, Dwarka</strong></div></div>
-<div class="card"><div>“AC cooling improved after gas filling.”<br><strong>- Imran, Laxmi Nagar</strong></div></div>
-</div>
-</section>
-
-<section>
-<h2>Service Areas in Delhi</h2>
-<p>Dwarka | Uttam Nagar | Janakpuri | Rohini | Laxmi Nagar | Karol Bagh | South Delhi | West Delhi</p>
+  <h2>Working Hours</h2>
+  <p>Monday – Sunday: <b>9:00 AM – 8:00 PM</b><br>Service available across Delhi</p>
 </section>
 
 <footer>
 © 2025 Chillwise Air Conditioner. All rights reserved.
 </footer>
 
-<div class="whatsapp"><a href="https://wa.me/919690990107">💬</a></div>
-<div class="callbar"><a href="tel:+919690990107">📞 Call Now: 9690990107</a></div>
+<a href="https://wa.me/919690990107" class="whatsapp-float">💬</a>
+<div class="callbar">
+  <a href="tel:9690990107">📞 Call Now: 9690990107</a>
+</div>
 
 </body>
-  </html>
+</html>
