--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
 *{box-sizing:border-box}
 body{
   margin:0;
-  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
+  font-family:Arial,Helvetica,sans-serif;
   background:var(--bg);
   color:var(--text);
 }
 
-/* ===== TOP NOTICE ===== */
+/* Top bar */
 .topbar{
   background:var(--dark);
   color:#fff;
   text-align:center;
-  padding:8px 10px;
+  padding:8px;
   font-size:14px;
   font-weight:600;
 }
 
-/* ===== HERO ===== */
+/* Hero */
 .hero{
   background:linear-gradient(135deg,#0284c7,#0ea5e9);
   color:#fff;
@@ -47,27 +47,20 @@ body{
 .hero h1{
   font-size:34px;
   margin-bottom:12px;
-  letter-spacing:.3px;
 }
 
 .hero p{
   font-size:16px;
-  max-width:640px;
-  margin:0 auto 10px;
   opacity:.95;
 }
 
 .hero .phone{
   font-size:22px;
   font-weight:800;
-  margin:16px 0 8px;
+  margin:16px 0;
 }
 
-.hero .cta{
-  margin-top:22px;
-}
-
-.hero .cta a{
+.hero a{
   display:inline-block;
   margin:6px;
   padding:15px 34px;
@@ -75,18 +68,17 @@ body{
   font-weight:700;
   text-decoration:none;
   color:#fff;
-  font-size:15px;
 }
 
-.hero .whatsapp{background:var(--accent)}
-.hero .call{background:var(--dark)}
+.whatsapp{background:var(--accent)}
+.call{background:var(--dark)}
 
-/* ===== SECTIONS ===== */
+/* Sections */
 section{
   padding:56px 20px;
 }
 
-section h2{
+h2{
   text-align:center;
   font-size:28px;
   margin-bottom:14px;
@@ -95,12 +87,11 @@ section h2{
 .section-sub{
   text-align:center;
   color:var(--muted);
-  max-width:700px;
-  margin:0 auto 36px;
+  margin-bottom:36px;
   font-size:15px;
 }
 
-/* ===== GRID ===== */
+/* Grid */
 .grid{
   max-width:1100px;
   margin:auto;
@@ -109,78 +100,60 @@ section h2{
   gap:24px;
 }
 
-/* ===== CARDS ===== */
+/* Cards */
 .card{
   background:var(--card);
   border-radius:18px;
-  padding:28px 26px;
+  padding:26px;
   box-shadow:0 10px 30px rgba(2,6,23,.08);
 }
 
 .card h3{
-  font-size:20px;
-  margin-bottom:10px;
+  font-size:18px;
+  margin-bottom:8px;
 }
 
 .card p{
-  font-size:15px;
+  font-size:14px;
   color:var(--muted);
-  line-height:1.6;
 }
 
-/* ===== SERVICES ===== */
-.service-card{
-  border-left:6px solid var(--primary);
-}
-
-/* ===== PRICING ===== */
+/* Price */
 .price{
-  font-size:24px;
+  font-size:22px;
   font-weight:800;
   color:var(--accent);
-  margin-top:12px;
+  margin-top:10px;
 }
 
-/* ===== BRANDS ===== */
+/* Brands */
 .brands{
   max-width:900px;
-  margin:40px auto 0;
+  margin:auto;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
   gap:16px;
 }
 
 .brand{
-  background:var(--card);
-  padding:18px 10px;
-  text-align:center;
+  background:#fff;
+  padding:16px;
   border-radius:14px;
   font-weight:700;
+  text-align:center;
   box-shadow:0 8px 20px rgba(2,6,23,.08);
 }
 
-/* ===== REVIEWS ===== */
-.review{
-  font-size:15px;
-  font-style:italic;
-}
-
-.review b{
-  display:block;
-  margin-top:10px;
-  font-style:normal;
-}
-
-/* ===== FOOTER ===== */
+/* Footer */
 footer{
   background:var(--dark);
   color:#cbd5e1;
-  padding:28px 16px;
+  padding:28px;
   text-align:center;
   font-size:14px;
 }
 
-/* ===== FLOATING ===== */
+/* Floating */
 .whatsapp-float{
   position:fixed;
   right:18px;
@@ -201,13 +174,12 @@ footer{
   background:var(--dark);
   text-align:center;
   padding:14px;
-  font-weight:800;
 }
 
 .callbar a{
   color:#fff;
   text-decoration:none;
-  font-size:16px;
+  font-weight:800;
 }
 </style>
 </head>
@@ -215,88 +187,70 @@ footer{
 <body>
 
 <div class="topbar">
-📞 Emergency & Same-Day AC Service Available in Delhi
+📞 Same-Day AC Service Available Across Delhi
 </div>
 
 <div class="hero">
   <h1>Chillwise Air Conditioner</h1>
-  <p>Professional AC Repair, Installation & Gas Filling Services Across Delhi</p>
-
+  <p>Professional AC Repair, Installation & Gas Filling Services</p>
   <div class="phone">Call: 9690990107</div>
 
-  <div class="cta">
-    <a href="https://wa.me/919690990107" class="whatsapp">WhatsApp Booking</a>
-    <a href="tel:9690990107" class="call">Call Now</a>
-  </div>
+  <a href="https://wa.me/919690990107" class="whatsapp">WhatsApp Booking</a>
+  <a href="tel:9690990107" class="call">Call Now</a>
 </div>
 
 <section>
   <h2>Our Core AC Services</h2>
-  <p class="section-sub">
-    Expert technicians • Honest diagnosis • No unnecessary upselling
-  </p>
+  <p class="section-sub">Expert technicians • Honest diagnosis • No hidden charges</p>
 
   <div class="grid">
-    <div class="card service-card">
+    <div class="card">
       <h3>AC Repair & Servicing</h3>
-      <p>Complete inspection, cleaning and fault repair to restore proper cooling and efficiency.</p>
+      <p>Complete inspection, cleaning and fault repair.</p>
     </div>
-
-    <div class="card service-card">
+    <div class="card">
       <h3>AC Installation & Uninstallation</h3>
-      <p>Safe installation for split and window AC units with proper fitting and testing.</p>
+      <p>Safe fitting for split and window AC units.</p>
     </div>
-
-    <div class="card service-card">
+    <div class="card">
       <h3>Gas Filling & Leakage Fix</h3>
-      <p>Accurate gas refilling with leakage check to ensure long-lasting cooling.</p>
+      <p>Accurate gas refill with leakage testing.</p>
     </div>
   </div>
 </section>
 
 <section style="background:#f1f5f9">
-  <h2>Transparent Service Pricing</h2>
-  <p class="section-sub">
-    Clear rates • No hidden charges • Final price after inspection
-  </p>
+  <h2>Service Price List</h2>
+  <p class="section-sub">Prices arranged from higher to lower for full transparency</p>
 
   <div class="grid">
-    <div class="card">
-      <h3>Jet Pump AC Service</h3>
-      <div class="price">₹499</div>
-    </div>
 
-    <div class="card">
-      <h3>Water Leakage Repair</h3>
-      <div class="price">₹399</div>
-    </div>
+    <div class="card"><h3>PCB Repair (Inverter AC)</h3><div class="price">₹4,500</div></div>
+    <div class="card"><h3>Gas Refilling</h3><div class="price">₹2,499 – ₹3,199</div></div>
+    <div class="card"><h3>Fan Motor Replacement</h3><div class="price">₹2,500</div></div>
+    <div class="card"><h3>PCB Repair (Non-Inverter AC)</h3><div class="price">₹2,000</div></div>
+    <div class="card"><h3>Copper Pipe (per meter)</h3><div class="price">₹1,399</div></div>
+    <div class="card"><h3>Split AC Installation</h3><div class="price">₹1,299</div></div>
+    <div class="card"><h3>AC Re-Installation</h3><div class="price">₹1,299</div></div>
+    <div class="card"><h3>Stand / Bracket</h3><div class="price">₹799 – ₹1,299</div></div>
+    <div class="card"><h3>Swing Motor Replacement</h3><div class="price">₹800</div></div>
+    <div class="card"><h3>Split AC Uninstallation</h3><div class="price">₹800</div></div>
+    <div class="card"><h3>Capacitor Replacement</h3><div class="price">₹800</div></div>
+    <div class="card"><h3>Window AC Installation</h3><div class="price">₹699</div></div>
+    <div class="card"><h3>Noise Issue Fixing</h3><div class="price">₹500</div></div>
+    <div class="card"><h3>Window AC Uninstallation</h3><div class="price">₹500</div></div>
+    <div class="card"><h3>Gas Leakage Check</h3><div class="price">₹499</div></div>
+    <div class="card"><h3>Jet Pump AC Service</h3><div class="price">₹499</div></div>
+    <div class="card"><h3>Water Leakage Repair</h3><div class="price">₹400</div></div>
+    <div class="card"><h3>Stabilizer Installation</h3><div class="price">₹200</div></div>
+    <div class="card"><h3>Wiring (per meter)</h3><div class="price">₹150</div></div>
+    <div class="card"><h3>Drain Pipe (per feet)</h3><div class="price">₹50</div></div>
 
-    <div class="card">
-      <h3>Noise Issue Fix</h3>
-      <div class="price">₹499</div>
-    </div>
-
-    <div class="card">
-      <h3>PCB Repair (Non-Inverter)</h3>
-      <div class="price">₹1,999</div>
-    </div>
-
-    <div class="card">
-      <h3>PCB Repair (Inverter)</h3>
-      <div class="price">₹4,499</div>
-    </div>
-
-    <div class="card">
-      <h3>Gas Refilling</h3>
-      <div class="price">₹2,499 – ₹3,199</div>
-    </div>
   </div>
 </section>
 
 <section>
   <h2>Brands We Service</h2>
-  <p class="section-sub">All major split & window AC brands supported</p>
-
   <div class="brands">
     <div class="brand">LG</div>
     <div class="brand">Samsung</div>
@@ -305,36 +259,6 @@ footer{
     <div class="brand">Hitachi</div>
     <div class="brand">O’General</div>
   </div>
-</section>
-
-<section style="background:#f1f5f9">
-  <h2>What Customers Say</h2>
-
-  <div class="grid">
-    <div class="card review">
-      “Technician arrived on time and solved the issue properly. Very professional.”
-      <b>— Sandeep, Delhi</b>
-    </div>
-
-    <div class="card review">
-      “Clear pricing and fast service. No unnecessary extra charges.”
-      <b>— Pooja, Dwarka</b>
-    </div>
-
-    <div class="card review">
-      “Cooling improved a lot after gas filling. Good experience.”
-      <b>— Imran, Laxmi Nagar</b>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Working Hours</h2>
-  <p style="text-align:center;font-size:16px">
-    Monday – Sunday<br>
-    <b>9:00 AM – 8:00 PM</b><br>
-    Service Available Across Delhi
-  </p>
 </section>
 
 <footer>
