--- a/index.html
+++ b/index.html
@@ -5,33 +5,34 @@
 <title>Chillwise Air Conditioner | AC Repair Service Delhi</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="Reliable AC repair, installation and gas filling service in Delhi. Same-day service, transparent pricing, trusted technicians.">
+<meta name="description" content="Premium AC repair, installation and gas filling service in Delhi. Same-day service, transparent pricing, trusted technicians.">
 
 <style>
 :root{
-  --primary:#0ea5e9;
-  --dark:#020617;
-  --accent:#16a34a;
+  --navy:#020617;
+  --blue:#0ea5e9;
+  --green:#22c55e;
   --bg:#f8fafc;
   --card:#ffffff;
+  --darkcard:#020617;
   --text:#0f172a;
-  --muted:#475569;
+  --muted:#94a3b8;
 }
 
 *{box-sizing:border-box}
 body{
   margin:0;
-  font-family:Arial,Helvetica,sans-serif;
+  font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif;
   background:var(--bg);
   color:var(--text);
 }
 
 /* Top bar */
 .topbar{
-  background:var(--dark);
+  background:var(--navy);
   color:#fff;
   text-align:center;
-  padding:8px;
+  padding:9px;
   font-size:14px;
   font-weight:600;
 }
@@ -40,12 +41,12 @@ body{
 .hero{
   background:linear-gradient(135deg,#0284c7,#0ea5e9);
   color:#fff;
-  padding:60px 20px;
+  padding:64px 20px;
   text-align:center;
 }
 
 .hero h1{
-  font-size:34px;
+  font-size:36px;
   margin-bottom:12px;
 }
 
@@ -55,39 +56,39 @@ body{
 }
 
 .hero .phone{
-  font-size:22px;
-  font-weight:800;
-  margin:16px 0;
+  font-size:24px;
+  font-weight:900;
+  margin:18px 0;
 }
 
 .hero a{
   display:inline-block;
   margin:6px;
-  padding:15px 34px;
+  padding:15px 36px;
   border-radius:40px;
-  font-weight:700;
+  font-weight:800;
   text-decoration:none;
   color:#fff;
 }
 
-.whatsapp{background:var(--accent)}
-.call{background:var(--dark)}
+.whatsapp{background:var(--green)}
+.call{background:var(--navy)}
 
 /* Sections */
 section{
-  padding:56px 20px;
+  padding:60px 20px;
 }
 
 h2{
   text-align:center;
-  font-size:28px;
+  font-size:30px;
   margin-bottom:14px;
 }
 
 .section-sub{
   text-align:center;
-  color:var(--muted);
-  margin-bottom:36px;
+  color:#475569;
+  margin-bottom:40px;
   font-size:15px;
 }
 
@@ -97,33 +98,25 @@ h2{
   margin:auto;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:24px;
+  gap:26px;
 }
 
 /* Cards */
 .card{
   background:var(--card);
-  border-radius:18px;
-  padding:26px;
-  box-shadow:0 10px 30px rgba(2,6,23,.08);
+  border-radius:20px;
+  padding:30px;
+  box-shadow:0 12px 32px rgba(2,6,23,.08);
 }
 
 .card h3{
-  font-size:18px;
-  margin-bottom:8px;
+  font-size:19px;
+  margin-bottom:10px;
 }
 
 .card p{
-  font-size:14px;
-  color:var(--muted);
-}
-
-/* Price */
-.price{
-  font-size:22px;
-  font-weight:800;
-  color:var(--accent);
-  margin-top:10px;
+  font-size:15px;
+  color:#475569;
 }
 
 /* Brands */
@@ -132,21 +125,65 @@ h2{
   margin:auto;
   display:grid;
   grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
-  gap:16px;
+  gap:18px;
 }
 
 .brand{
   background:#fff;
-  padding:16px;
-  border-radius:14px;
-  font-weight:700;
+  padding:18px;
+  border-radius:16px;
+  font-weight:800;
   text-align:center;
-  box-shadow:0 8px 20px rgba(2,6,23,.08);
+  box-shadow:0 10px 28px rgba(2,6,23,.08);
+}
+
+/* PREMIUM PRICING */
+.pricing{
+  background:#0f172a;
+  color:#e5e7eb;
+}
+
+.pricing h2{color:#fff}
+
+.pricing .section-sub{color:#94a3b8}
+
+.price-grid{
+  max-width:1100px;
+  margin:auto;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:24px;
+}
+
+.price-card{
+  background:#020617;
+  border-radius:22px;
+  padding:28px;
+  border:1px solid rgba(255,255,255,.06);
+  box-shadow:0 18px 50px rgba(0,0,0,.45);
+}
+
+.price-card h3{
+  font-size:17px;
+  color:#e5e7eb;
+}
+
+.price{
+  font-size:26px;
+  font-weight:900;
+  color:var(--green);
+  margin-top:10px;
+}
+
+.note{
+  font-size:12px;
+  color:#94a3b8;
+  margin-top:6px;
 }
 
 /* Footer */
 footer{
-  background:var(--dark);
+  background:var(--navy);
   color:#cbd5e1;
   padding:28px;
   text-align:center;
@@ -158,7 +195,7 @@ footer{
   position:fixed;
   right:18px;
   bottom:78px;
-  background:var(--accent);
+  background:var(--green);
   color:#fff;
   padding:14px 16px;
   border-radius:50%;
@@ -171,15 +208,15 @@ footer{
   bottom:0;
   left:0;
   width:100%;
-  background:var(--dark);
+  background:var(--navy);
   text-align:center;
-  padding:14px;
+  padding:15px;
 }
 
 .callbar a{
   color:#fff;
   text-decoration:none;
-  font-weight:800;
+  font-weight:900;
 }
 </style>
 </head>
@@ -192,7 +229,7 @@ footer{
 
 <div class="hero">
   <h1>Chillwise Air Conditioner</h1>
-  <p>Professional AC Repair, Installation & Gas Filling Services</p>
+  <p>Premium AC Repair, Installation & Gas Filling Services</p>
   <div class="phone">Call: 9690990107</div>
 
   <a href="https://wa.me/919690990107" class="whatsapp">WhatsApp Booking</a>
@@ -200,52 +237,41 @@ footer{
 </div>
 
 <section>
-  <h2>Our Core AC Services</h2>
-  <p class="section-sub">Expert technicians • Honest diagnosis • No hidden charges</p>
+  <h2>Our Core Services</h2>
+  <p class="section-sub">Experienced technicians • Honest diagnosis • Quality workmanship</p>
 
   <div class="grid">
-    <div class="card">
-      <h3>AC Repair & Servicing</h3>
-      <p>Complete inspection, cleaning and fault repair.</p>
-    </div>
-    <div class="card">
-      <h3>AC Installation & Uninstallation</h3>
-      <p>Safe fitting for split and window AC units.</p>
-    </div>
-    <div class="card">
-      <h3>Gas Filling & Leakage Fix</h3>
-      <p>Accurate gas refill with leakage testing.</p>
-    </div>
+    <div class="card"><h3>AC Repair & Servicing</h3><p>Complete inspection, cleaning and fault repair.</p></div>
+    <div class="card"><h3>AC Installation & Uninstallation</h3><p>Safe installation for split & window AC units.</p></div>
+    <div class="card"><h3>Gas Filling & Leakage Fix</h3><p>Accurate gas refilling with leakage testing.</p></div>
   </div>
 </section>
 
-<section style="background:#f1f5f9">
-  <h2>Service Price List</h2>
-  <p class="section-sub">Prices arranged from higher to lower for full transparency</p>
+<section class="pricing">
+  <h2>Transparent Service Pricing</h2>
+  <p class="section-sub">Premium service • Clear rates • No hidden charges</p>
 
-  <div class="grid">
-
-    <div class="card"><h3>PCB Repair (Inverter AC)</h3><div class="price">₹4,500</div></div>
-    <div class="card"><h3>Gas Refilling</h3><div class="price">₹2,499 – ₹3,199</div></div>
-    <div class="card"><h3>Fan Motor Replacement</h3><div class="price">₹2,500</div></div>
-    <div class="card"><h3>PCB Repair (Non-Inverter AC)</h3><div class="price">₹2,000</div></div>
-    <div class="card"><h3>Copper Pipe (per meter)</h3><div class="price">₹1,399</div></div>
-    <div class="card"><h3>Split AC Installation</h3><div class="price">₹1,299</div></div>
-    <div class="card"><h3>AC Re-Installation</h3><div class="price">₹1,299</div></div>
-    <div class="card"><h3>Stand / Bracket</h3><div class="price">₹799 – ₹1,299</div></div>
-    <div class="card"><h3>Swing Motor Replacement</h3><div class="price">₹800</div></div>
-    <div class="card"><h3>Split AC Uninstallation</h3><div class="price">₹800</div></div>
-    <div class="card"><h3>Capacitor Replacement</h3><div class="price">₹800</div></div>
-    <div class="card"><h3>Window AC Installation</h3><div class="price">₹699</div></div>
-    <div class="card"><h3>Noise Issue Fixing</h3><div class="price">₹500</div></div>
-    <div class="card"><h3>Window AC Uninstallation</h3><div class="price">₹500</div></div>
-    <div class="card"><h3>Gas Leakage Check</h3><div class="price">₹499</div></div>
-    <div class="card"><h3>Jet Pump AC Service</h3><div class="price">₹499</div></div>
-    <div class="card"><h3>Water Leakage Repair</h3><div class="price">₹400</div></div>
-    <div class="card"><h3>Stabilizer Installation</h3><div class="price">₹200</div></div>
-    <div class="card"><h3>Wiring (per meter)</h3><div class="price">₹150</div></div>
-    <div class="card"><h3>Drain Pipe (per feet)</h3><div class="price">₹50</div></div>
-
+  <div class="price-grid">
+    <div class="price-card"><h3>PCB Repair (Inverter AC)</h3><div class="price">₹4,500</div></div>
+    <div class="price-card"><h3>Gas Refilling</h3><div class="price">₹2,499 – ₹3,199</div><div class="note">Based on AC capacity</div></div>
+    <div class="price-card"><h3>Fan Motor Replacement</h3><div class="price">₹2,500</div></div>
+    <div class="price-card"><h3>PCB Repair (Non-Inverter AC)</h3><div class="price">₹2,000</div></div>
+    <div class="price-card"><h3>Copper Pipe (per meter)</h3><div class="price">₹1,399</div></div>
+    <div class="price-card"><h3>Split AC Installation</h3><div class="price">₹1,299</div></div>
+    <div class="price-card"><h3>AC Re-Installation</h3><div class="price">₹1,299</div></div>
+    <div class="price-card"><h3>Stand / Bracket</h3><div class="price">₹799 – ₹1,299</div></div>
+    <div class="price-card"><h3>Swing Motor Replacement</h3><div class="price">₹800</div></div>
+    <div class="price-card"><h3>Split AC Uninstallation</h3><div class="price">₹800</div></div>
+    <div class="price-card"><h3>Capacitor Replacement</h3><div class="price">₹800</div></div>
+    <div class="price-card"><h3>Window AC Installation</h3><div class="price">₹699</div></div>
+    <div class="price-card"><h3>Noise Issue Fixing</h3><div class="price">₹500</div></div>
+    <div class="price-card"><h3>Window AC Uninstallation</h3><div class="price">₹500</div></div>
+    <div class="price-card"><h3>Gas Leakage Check</h3><div class="price">₹499</div></div>
+    <div class="price-card"><h3>Jet Pump AC Service</h3><div class="price">₹499</div></div>
+    <div class="price-card"><h3>Water Leakage Repair</h3><div class="price">₹400</div></div>
+    <div class="price-card"><h3>Stabilizer Installation</h3><div class="price">₹200</div></div>
+    <div class="price-card"><h3>Wiring (per meter)</h3><div class="price">₹150</div></div>
+    <div class="price-card"><h3>Drain Pipe (per feet)</h3><div class="price">₹50</div></div>
   </div>
 </section>
 
@@ -266,7 +292,6 @@ footer{
 </footer>
 
 <a href="https://wa.me/919690990107" class="whatsapp-float">💬</a>
-
 <div class="callbar">
   <a href="tel:9690990107">📞 Call Now: 9690990107</a>
 </div>
