--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <title>Chillwise Air Conditioner | AC Repair Service Delhi</title>
 
+<meta name="google-site-verification" content="bqpq9Ez2kLuenFxGxBR1KsPEFG8UMv2TJMJS5S8G4Bs" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="Premium AC repair, installation and gas filling service in Delhi. Same-day service, transparent pricing, trusted technicians.">
 
