--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
 <meta name="google-site-verification" content="bqpq9Ez2kLuenFxGxBR1KsPEFG8UMv2TJMJS5S8G4Bs" />
 
 <meta charset="UTF-8">
-
-<!-- ✅ SEO TITLE -->
-<title>AC Repair Service in Delhi | Chillwise Air Conditioner</title>
+<title>Chillwise Air Conditioner | AC Repair Service Delhi</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<!-- ✅ SEO DESCRIPTION -->
-<meta name="description" content="Chillwise Air Conditioner offers fast AC repair service in Delhi including Uttam Nagar, West Delhi, Dwarka & Janakpuri. Same-day AC servicing, installation and gas filling at affordable prices.">
-
-<meta name="robots" content="index, follow">
+<meta name="description" content="Premium AC repair, installation and gas filling service in Delhi. Same-day service, transparent pricing, trusted technicians.">
 
 <style>
 :root{
@@ -28,6 +22,7 @@
   --text:#0f172a;
   --muted:#94a3b8;
 }
+
 *{box-sizing:border-box}
 body{
   margin:0;
@@ -53,19 +48,23 @@ body{
   padding:64px 20px;
   text-align:center;
 }
+
 .hero h1{
   font-size:36px;
   margin-bottom:12px;
 }
+
 .hero p{
   font-size:16px;
   opacity:.95;
 }
+
 .hero .phone{
   font-size:24px;
   font-weight:900;
   margin:18px 0;
 }
+
 .hero a{
   display:inline-block;
   margin:6px;
@@ -75,12 +74,21 @@ body{
   text-decoration:none;
   color:#fff;
 }
+
 .whatsapp{background:var(--green)}
 .call{background:var(--navy)}
 
 /* Sections */
-section{padding:60px 20px}
-h2{text-align:center;font-size:30px;margin-bottom:14px}
+section{
+  padding:60px 20px;
+}
+
+h2{
+  text-align:center;
+  font-size:30px;
+  margin-bottom:14px;
+}
+
 .section-sub{
   text-align:center;
   color:#475569;
@@ -104,28 +112,16 @@ h2{text-align:center;font-size:30px;margin-bottom:14px}
   padding:30px;
   box-shadow:0 12px 32px rgba(2,6,23,.08);
 }
-.card h3{font-size:19px;margin-bottom:10px}
-.card p{font-size:15px;color:#475569}
 
-/* Pricing */
-.pricing{background:#0f172a;color:#e5e7eb}
-.pricing h2{color:#fff}
-.pricing .section-sub{color:#94a3b8}
+.card h3{
+  font-size:19px;
+  margin-bottom:10px;
+}
 
-.price-grid{
-  max-width:1100px;
-  margin:auto;
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:24px;
+.card p{
+  font-size:15px;
+  color:#475569;
 }
-.price-card{
-  background:#020617;
-  border-radius:22px;
-  padding:28px;
-  border:1px solid rgba(255,255,255,.06);
-}
-.price{font-size:26px;font-weight:900;color:var(--green)}
 
 /* Brands */
 .brands{
@@ -135,12 +131,58 @@ h2{text-align:center;font-size:30px;margin-bottom:14px}
   grid-template-columns:repeat(auto-fit,minmax(120px,1fr));
   gap:18px;
 }
+
 .brand{
   background:#fff;
   padding:18px;
   border-radius:16px;
   font-weight:800;
   text-align:center;
+  box-shadow:0 10px 28px rgba(2,6,23,.08);
+}
+
+/* PREMIUM PRICING */
+.pricing{
+  background:#0f172a;
+  color:#e5e7eb;
+}
+
+.pricing h2{color:#fff}
+
+.pricing .section-sub{color:#94a3b8}
+
+.price-grid{
+  max-width:1100px;
+  margin:auto;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:24px;
+}
+
+.price-card{
+  background:#020617;
+  border-radius:22px;
+  padding:28px;
+  border:1px solid rgba(255,255,255,.06);
+  box-shadow:0 18px 50px rgba(0,0,0,.45);
+}
+
+.price-card h3{
+  font-size:17px;
+  color:#e5e7eb;
+}
+
+.price{
+  font-size:26px;
+  font-weight:900;
+  color:var(--green);
+  margin-top:10px;
+}
+
+.note{
+  font-size:12px;
+  color:#94a3b8;
+  margin-top:6px;
 }
 
 /* Footer */
@@ -164,6 +206,7 @@ footer{
   font-size:22px;
   text-decoration:none;
 }
+
 .callbar{
   position:fixed;
   bottom:0;
@@ -173,7 +216,12 @@ footer{
   text-align:center;
   padding:15px;
 }
-.callbar a{color:#fff;text-decoration:none;font-weight:900}
+
+.callbar a{
+  color:#fff;
+  text-decoration:none;
+  font-weight:900;
+}
 </style>
 </head>
 
@@ -184,8 +232,7 @@ footer{
 </div>
 
 <div class="hero">
-  <!-- ✅ SEO H1 -->
-  <h1>AC Repair Service in Delhi</h1>
+  <h1>Chillwise Air Conditioner</h1>
   <p>Premium AC Repair, Installation & Gas Filling Services</p>
   <div class="phone">Call: 9690990107</div>
 
@@ -194,37 +241,43 @@ footer{
 </div>
 
 <section>
-  <h2>Our Core AC Services</h2>
+  <h2>Our Core Services</h2>
   <p class="section-sub">Experienced technicians • Honest diagnosis • Quality workmanship</p>
 
   <div class="grid">
-    <div class="card"><h3>AC Repair & Servicing</h3><p>Professional split & window AC repair in Delhi.</p></div>
-    <div class="card"><h3>AC Installation</h3><p>Safe and reliable AC installation services.</p></div>
-    <div class="card"><h3>AC Gas Filling</h3><p>Accurate gas refilling with leakage check.</p></div>
+    <div class="card"><h3>AC Repair & Servicing</h3><p>Complete inspection, cleaning and fault repair.</p></div>
+    <div class="card"><h3>AC Installation & Uninstallation</h3><p>Safe installation for split & window AC units.</p></div>
+    <div class="card"><h3>Gas Filling & Leakage Fix</h3><p>Accurate gas refilling with leakage testing.</p></div>
   </div>
 </section>
 
 <section class="pricing">
-  <h2>Transparent AC Service Pricing</h2>
-  <p class="section-sub">No hidden charges • Honest pricing</p>
-  <!-- pricing unchanged -->
-</section>
+  <h2>Transparent Service Pricing</h2>
+  <p class="section-sub">Premium service • Clear rates • No hidden charges</p>
 
-<!-- ✅ SEO TEXT SECTION (FAST RANKING) -->
-<section>
-  <h2>Best AC Repair Service in Delhi</h2>
-  <p>
-    Chillwise Air Conditioner provides reliable AC repair service in Delhi for
-    split AC and window AC units. Our expert technicians offer same-day AC servicing,
-    installation, gas filling and maintenance with transparent pricing.
-  </p>
-
-  <h2>AC Service Near You in West Delhi</h2>
-  <p>
-    We serve Uttam Nagar, West Delhi, Dwarka, Janakpuri and nearby areas.
-    If you are searching for <strong>AC repair near me</strong> or
-    <strong>AC service in West Delhi</strong>, our team is ready to help.
-  </p>
+  <div class="price-grid">
+    <!-- prices unchanged -->
+    <div class="price-card"><h3>PCB Repair (Inverter AC)</h3><div class="price">₹4,500</div></div>
+    <div class="price-card"><h3>Gas Refilling</h3><div class="price">₹2,499 – ₹3,199</div></div>
+    <div class="price-card"><h3>Fan Motor Replacement</h3><div class="price">₹2,500</div></div>
+    <div class="price-card"><h3>PCB Repair (Non-Inverter AC)</h3><div class="price">₹2,000</div></div>
+    <div class="price-card"><h3>Copper Pipe (per meter)</h3><div class="price">₹1,399</div></div>
+    <div class="price-card"><h3>Split AC Installation</h3><div class="price">₹1,299</div></div>
+    <div class="price-card"><h3>AC Re-Installation</h3><div class="price">₹1,299</div></div>
+    <div class="price-card"><h3>Stand / Bracket</h3><div class="price">₹799 – ₹1,299</div></div>
+    <div class="price-card"><h3>Swing Motor Replacement</h3><div class="price">₹800</div></div>
+    <div class="price-card"><h3>Split AC Uninstallation</h3><div class="price">₹800</div></div>
+    <div class="price-card"><h3>Capacitor Replacement</h3><div class="price">₹800</div></div>
+    <div class="price-card"><h3>Window AC Installation</h3><div class="price">₹699</div></div>
+    <div class="price-card"><h3>Noise Issue Fixing</h3><div class="price">₹500</div></div>
+    <div class="price-card"><h3>Window AC Uninstallation</h3><div class="price">₹500</div></div>
+    <div class="price-card"><h3>Gas Leakage Check</h3><div class="price">₹499</div></div>
+    <div class="price-card"><h3>Jet Pump AC Service</h3><div class="price">₹499</div></div>
+    <div class="price-card"><h3>Water Leakage Repair</h3><div class="price">₹400</div></div>
+    <div class="price-card"><h3>Stabilizer Installation</h3><div class="price">₹200</div></div>
+    <div class="price-card"><h3>Wiring (per meter)</h3><div class="price">₹150</div></div>
+    <div class="price-card"><h3>Drain Pipe (per feet)</h3><div class="price">₹50</div></div>
+  </div>
 </section>
 
 <section>
@@ -240,8 +293,7 @@ footer{
 </section>
 
 <footer>
-© 2025 Chillwise Air Conditioner • All Rights Reserved<br>
-Service Areas: Uttam Nagar, West Delhi, Dwarka, Janakpuri, Delhi NCR
+© 2025 Chillwise Air Conditioner • All Rights Reserved
 </footer>
 
 <a href="https://wa.me/919690990107" class="whatsapp-float">💬</a>
